force-app/main/default/objects/AFSC__FSScanResultCacheItem__c/AFSC__FSScanResultCacheItem__c.object-meta.xml
<CustomObject>
    <description>F-Secure Cloud Protection: Recent scan result cache</description>
    <label>Scan Result Cache Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scan Result Cache Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>