force-app/main/default/objects/AFSC__FSScanResultCacheItem__c/fields/AFSC__Scan_Result__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Scan_Result__c</fullName>
    <label>Scan Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>