force-app/main/default/objects/AFSC__FSScanResultCacheItem__c/fields/AFSC__Sha1__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Sha1__c</fullName>
    <externalId>true</externalId>
    <label>Sha1</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>