force-app/main/default/objects/AFSC__FSScanResultCacheItem__c/listViews/AFSC__All.listView-meta.xml
<ListView>
    <fullName>AFSC__All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>AFSC__Scan_Result__c</columns>
    <columns>AFSC__Sha1__c</columns>
    <columns>AFSC__Verdict__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>